# aqio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  code_review.md  invitations.csv  justfile  signe_phd_defense_contacts.csv  signe_phd_defense_event.csv  signe_phd_defense_invitations.csv
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/issues/: 001-payment-ticketing-system.md  002-recurring-series-events.md  003-venue-location-management.md  004-rbac-team-management.md  005-webhooks-api-integrations.md
aqio-api/: CHANGELOG.md  Cargo.toml  TESTING.md
aqio-api/src/: handlers.rs  main.rs
aqio-api/src/auth/: mock.rs  mod.rs
aqio-api/src/domain/: dto.rs  errors.rs  mod.rs  services.rs  services_test.rs
aqio-api/src/infrastructure/: mod.rs
aqio-api/src/infrastructure/web/: categories.rs  events.rs  extractors.rs  health.rs  invitations.rs  mod.rs  openapi.rs  registrations.rs  response.rs  routing.rs  state.rs  users.rs
aqio-api/src/infrastructure/web/handlers/: categories.rs  events.rs  health.rs  invitations.rs  mod.rs  registrations.rs  test.rs  users.rs
aqio-api/src/infrastructure/web/middleware/: error_handling.rs  mod.rs  response.rs
aqio-api/src/testing/: helpers.rs  mocks.rs  mod.rs
aqio-cli/: Cargo.toml
aqio-core/: CHANGELOG.md  Cargo.toml
aqio-core/src/: lib.rs  models.rs
aqio-core/src/domain/: errors.rs  mod.rs  models.rs  repositories.rs  services.rs
aqio-database/: CHANGELOG.md  CLAUDE.md  Cargo.toml  TODO.md
aqio-database/examples/: repository_factory_usage.rs
aqio-database/migrations/: 001_users_and_profiles.sql  002_events_and_invitations.sql  003_communications_notifications.sql  004_additional_features.sql  005_email_smtp_settings.sql
aqio-database/src/: lib.rs  main.rs  repository.rs
aqio-database/src/domain/: error_examples.rs  errors.rs  mod.rs  repositories.rs
aqio-database/src/infrastructure/: mod.rs
aqio-database/src/infrastructure/persistence/: mapping.rs  mod.rs
aqio-database/src/infrastructure/persistence/sqlite/: event_category_repository.rs  event_repository.rs  factory.rs  invitation_repository.rs  mod.rs  registration_repository.rs  types.rs  user_repository.rs
aqio-frontend/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dioxus.toml  README.md  calendar_todo.md
aqio-frontend/assets/: aqio-buttons.css  aqio-layout.css  aqio-navigation.css  aqio-typography.css  login-modal.css  main.css
aqio-frontend/src/: api.rs  main.rs
aqio-frontend/src/application/: ports.rs  services.rs
aqio-frontend/src/components/: auth.rs  calendar.rs  calendar_enhanced.rs  event_card.rs  event_detail.rs  event_form.rs  event_list.rs  mod.rs  navigation.rs
aqio-frontend/src/domain/: events.rs
aqio-frontend/src/infrastructure/: api_client.rs  event_repository.rs  mod.rs
aqio-frontend/src/lib/: mod.rs
aqio-frontend/src/lib/components/: mod.rs
aqio-frontend/src/lib/components/button/: mod.rs  style.css
aqio-frontend/src/lib/components/card/: mod.rs  style.css
aqio-frontend/src/lib/components/feedback/: mod.rs
aqio-frontend/src/lib/components/form/: mod.rs
aqio-frontend/src/lib/components/layout/: mod.rs
aqio-frontend/src/lib/components/navigation/: mod.rs
aqio-frontend/src/lib/components/typography/: mod.rs
aqio-frontend/src/lib/icons/: mod.rs
aqio-frontend/src/lib/theme/: mod.rs  tokens.css
aqio-frontend/src/presentation/: routes.rs
aqio-frontend/src/presentation/pages/: events.rs
