[workspace]
members = [ "aqio-frontend", "aqio-api", "aqio-database", "aqio-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Emil Lindfors <emil@aquacloud.ai>"]
license = "MIT"
repository = "https://github.com/your-org/aqio"
description = "Comprehensive event management platform for the Norwegian aquaculture industry"

[workspace.dependencies]
# Core Rust ecosystem
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Validation and data
validator = { version = "0.16", features = ["derive"] }
serde_json = "1.0"

# Web and API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# Tracing and logging
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

# Testing
tokio-test = "0.4"
tempfile = "3.0"
serial_test = "3.0"

# Internal dependencies
aqio-core = { path = "./aqio-core" }
aqio-database = { path = "./aqio-database" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
