[package]
name = "aqio-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
aqio-database.workspace = true
aqio-core.workspace = true
jsonwebtoken = "9.0"
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio-util = "0.7.16"
hyper-util = "0.1.16"

[dev-dependencies]
tokio-test.workspace = true
axum-test = "16.1"
