[package]
name = "aqio-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
validator.workspace = true
tracing.workspace = true
serde_json.workspace = true
aqio-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
serial_test.workspace = true
