[package]
name = "aqio-frontend"
version = "0.1.0"
authors = ["Emil Lindfors <emil@aquacloud.ai>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["router"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
uuid = { version = "1.0", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
aqio-core = { path = "../aqio-core" }
# dioxus-primitives = { path = "components/primitives" }
log = "0.4"
console_error_panic_hook = "0.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
