[package]
name = "aqio-frontend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["router"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
uuid = { version = "1.0", features = ["serde", "v4", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
aqio-core.workspace = true
# dioxus-primitives = { path = "components/primitives" }
log.workspace = true
console_error_panic_hook = "0.1"
async-trait.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
